Closed Bug 1302059 Opened 9 years ago Closed 9 years ago

Linux getUserMedia does not support all modes of a camera

Categories

(Core :: WebRTC: Audio/Video, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox52 --- fixed

People

(Reporter: pehrsons, Assigned: mchiang)

References

Details

Attachments

(1 file)

I hear reports that a camera that supports resolutions like 640x360 does not work with that resolution for Firefox getUserMedia. On Ubuntu you can check for modes supported by your camera by installing v4l-utils and then running `v4l2-ctl --list-formats-ext`. Our backend code hardcodes which resolutions to support, much like the old qtkit implementation on Mac did but a bit better: http://searchfox.org/mozilla-central/rev/950e13cca1fda6507dc53c243295044e8eda4493/media/webrtc/trunk/webrtc/modules/video_capture/linux/device_info_linux.cc#285 Shouldn't be too hard to fix? The code of v4l2-ctl for reference is here: https://git.linuxtv.org/v4l-utils.git/tree/utils/v4l2-ctl
Rank: 22
Priority: -- → P2
Assignee: nobody → mchiang
Comment on attachment 8793251 [details] Bug 1302059 - use VIDIOC_ENUM_FMT & VIDIOC_ENUM_FRAMESIZES to query supported format & resolution; https://reviewboard.mozilla.org/r/80046/#review79036 Thanks!
Attachment #8793251 - Flags: review?(rjesup) → review+
Pushed by ryanvm@gmail.com: https://hg.mozilla.org/integration/autoland/rev/3b9eb7fee10b use VIDIOC_ENUM_FMT & VIDIOC_ENUM_FRAMESIZES to query supported format & resolution; r=jesup
Keywords: checkin-needed
Blocks: 1304965
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: