Bug 1302059 - use VIDIOC_ENUM_FMT & VIDIOC_ENUM_FRAMESIZES to query supported format & resolution; r=jesup

MozReview-Commit-ID: AFEeb9yrIzb